css/landing.css
/* general structure - lines and set up 
======================
======================
======================
*/

/* first section - top of page styling */
main {
  height: 100vh;
  overflow-y: scroll;
}

#introduction-section {
  gap: 0px;
  padding: 1.5rem 3% 1.5rem 3%;
  height: 95vh;
  display: grid;
  grid-template-columns: 16.7% 16.7% 16.66% 16.7% 16.66%;
  grid-template-rows: 98px 1fr 2fr;
}


#rory-block {
  font-family: "edit-old-light";
  font-weight: 100;
  color: #111111;
  line-height: 100%;
}

#general-info-text {
  padding-bottom:12px;
}

@supports (-moz-appearance: none) {

  #rory-block {
      line-height: 120%;
  }
  #introduction-section {
  grid-template-rows: 95px 1fr 2fr;
  }
}

.landing-page-lines {
  opacity: 1;
  position: fixed;
  z-index: -2;
  pointer-events: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100vw;
  height: 100vh;
}

.landing-page-lines span {
  border-left: 1px solid rgb(233, 233, 233);
  position: absolute;
  height: 100%;
  width: 1px;
  top: 0;
}

.landing-page-lines span:nth-of-type(1) {
  left: 3%;
}
.landing-page-lines span:nth-of-type(2) {
  left: 18.67%;
}
.landing-page-lines span:nth-of-type(3) {
  left: 34.33%;
}
.landing-page-lines span:nth-of-type(4) {
  left: 50%;
}
.landing-page-lines span:nth-of-type(5) {
  left: 65.75%;
}
.landing-page-lines span:nth-of-type(6) {
  left: 81.33%;
}
.landing-page-lines span:nth-of-type(7) {
  left: 97%;
}
.landing-page-lines span:nth-of-type(8) {
  left: 65%;
}

.nav-grouping {
  display: flex;
  align-items: center;
  gap: 0px;
  transition: all 0.4s ease-in-out;
}

.nav-arrow {
  width: 0px;
  opacity: 0;
}

.nav-grouping:hover .nav-arrow {
  opacity: 1;
  width: 16px;
}

.nav-grouping:hover {
  gap: 8px;
}

/* Top left part of the page - all of the intro pieces 
======================
======================
======================
*/
#heading-intro-first-block {
  display: flex;
  flex-direction: column;
  grid-column: 1 / span 3;
  grid-row-start: 1;
  grid-template-columns: 52vw 3vw;
  grid-template-rows: 9.5rem 8.2rem 1fr;
}

/* section paragraph piece" */
.italic-reg-text {
  font-family: "hass-roman-italic";
}

.h3-italic-text {
  font-family: "edit-old-light-italic";
  font-weight: 100;
}

/* Defining all of the text style changes in "Kia Ora I'm Rory Maddren" */


#blinking-clock {
  width: 10px;
}

/* Bottom piece - creditials and photo piece 
======================
======================
======================
*/
#bottom-credits-what-i-do-piece {
  grid-column: 1 / span 3;
  grid-template-columns: 19.7% 19.2% 19.7% 11.5% 20.9%;
  grid-row: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#bottom-credits-what-i-do-piece p {
  font-size: 1rem;
}

#specialty-text,
#location-text,
#linkedin-text,
#linkedin-text,
#instagram-text,
#instagram-text-photography {
  display: flex;
  grid-column: 1 / span 2;
  font-weight: 100;
}

#specialty-text {
  grid-row: 1;
  font-family: "hass-roman", sans-serif;
  font-weight: 300;
  letter-spacing: 0.02rem;
  color: #111111;
  padding-bottom: 6px;
      align-items: flex-end;
}

#location-text {
  grid-row: 2;
  gap: 4px;
}

#time-piece {
  font-family: "hass-light";
  display: flex;
  letter-spacing: 0.02rem;
}

#linkedin-text {
  grid-row: 3;
}

#instagram-text {
  grid-row: 4;
}

#instagram-text-photography {
  grid-row: 5;
}

/*
#bottom-credit-line {
  grid-row: 4;
  grid-row-end: 6;
  border-left: 1px solid #999999;
  height: 100%;
  width: 1px;
}
*/

#spacing-line-credits-section {
  grid-row: 3;
  grid-column: 1;
}

#interactive-designer-credit {
  grid-row: 2;
  display: inline;
}

/* left awards part
======================
======================
======================
*/
#left-side-section {
  grid-column: 1 / span 2;
  display: flex;
  flex-direction: column;
  gap: 32px;
  padding-top: 18px;
  font-size: 0.9rem;
}

.small-header {
  font-family: "hass-roman-medium", sans-serif;
  font-weight: 500;
  font-size: 0.8rem;
  letter-spacing: 0.02rem;
  color: #333333;
  line-height: 100%;
}

.awards-splitter-container,
#share-splitter-container {
  padding: 8px 0px 8px 0px;
  border-top: 1px solid #cecece;
  border-bottom: 1px solid #cecece;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  line-height: 100%;
}

#share-splitter-container-two {
  border-top: 0px solid #cecece;
}

.container-hover-effect-applied:hover {
  color: #999999;
}

.awards-splitter-container span,
.awards-splitter-container-minus-one span,
#share-splitter-container span,
#share-splitter-container-two span {
  font-family: "hass-light", sans-serif;
  line-height: 100%;
  font-weight: 100;
  font-size: 0.8rem;
}

.awards-splitter-container-minus-one {
  padding: 8px 0px 8px 0px;
  border-bottom: 1px solid #cecece;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  line-height: 100%;
}

.awards-splitter-container:hover,
.awards-splitter-container-minus-one:hover,
#share-splitter-container:hover,
#share-splitter-container-two:hover {
  color: #111;
  transition: all 0.3s ease-in-out;
  border-bottom-color: #111;
}

.awards-splitter-container:hover .reveal-image-link,
.awards-splitter-container:hover .selection-arrow,
.awards-splitter-container-minus-one:hover .reveal-image-link,
.awards-splitter-container-minus-one:hover .selection-arrow {
  opacity: 1;
}

.awards-splitter-container:hover .selection-arrow,
.awards-splitter-container-minus-one:hover .selection-arrow {
  width: 15px;
}

.awards-splitter-container:hover .grouping-images-and-title,
.awards-splitter-container-minus-one:hover .grouping-images-and-title {
  gap: 8px;
}

#design-rec-section {
  grid-row-start: 2;
}

#photo section {
  margin-top: 10px;
  grid-row: 6;
}

.selection-arrow {
  opacity: 0;
  width: 0px;
}

.reveal-image-link {
  height: 16px;
  opacity: 0;
}

.grouping-images-and-title {
  display: flex;
  gap: 0px;
  align-items: center;
}
/* ... */

